--- a/style.css
+++ b/style.css
@@ -279,34 +279,39 @@ a {
     
 }
 
-@media (max-width: 800px) {  
+
+@media (max-width: 844px) { 
     #container-aboutme, .item-aboutme {
-        padding: 15px;
-        margin: 10px; /* Reduzierte Margin für schmalere Bildschirme */
+        width: 90vw; 
+        font-size: clamp(14px, 4vw, 16px); 
+        margin-bottom: 10vh;
+    }
+
+    .divTitle, .divText p {
+        font-size: clamp(14px, 4vw, 16px);
+    }
+}
+
+@media (max-width: 700px) { 
+    #header {
+        margin-top: -9vh; /* Moves the header up by 9% of the viewport height */
+    }
+
+    /* Additional styles for mobile responsiveness */
+    #container-aboutme, .item-aboutme {
+        padding: 10px;
+        margin: 10px; /* Reduced margin for narrower screens */
     }
 
     .divTitle {
-        font-size: clamp(18px, 4vw, 20px);
+        font-size: clamp(18px, 5vw, 20px); /* Responsive font size for smaller screens */
     }
 
     .divText p {
-        font-size: clamp(14px, 3vw, 16px);
-        line-height: 1.4; 
+        font-size: clamp(14px, 3.5vw, 16px);
+        line-height: 1.4; /* Adjust line height for better readability */
     }
-
-    .nav-tab {
-        font-size: clamp(12px, 3.5vw, 14px);
-        padding: 10px 0;
-    }
-    .nav{
-        height: clamp( 10vw ,90vw, 100vw);
-    }
-
-
 }
-
-
-
 
 /*Project*/
 #container-project {
