--- a/aboutMe.css
+++ b/aboutMe.css
@@ -53,16 +53,25 @@
 @media (max-width: 700px) { 
     #header {
 
-        margin-top: -15%; 
+        margin-top: 3%;
     }
-    
+    #title{
+        margin-top: 5%;
+        margin-bottom: -8%;
+        font-size: 150%;
+    }
+
     #container-aboutme, .item-aboutme {
         padding: 10px;
         margin: 10px; 
     }
+    #container-aboutme{
+        margin-bottom: 80%;
+        margin-bottom: 20%;
+    }
 
     .divTitle {
-        font-size: clamp(18px, 5vw, 20px);
+        font-size: clamp(18px, 5vw, 20px); 
     }
 
     .divText p {
@@ -71,5 +80,6 @@
     }
     .nav-tab {
         font-size: clamp(12px, 3.5vw, 14px);
+        
     }
 }
