--- a/project.css
+++ b/project.css
@@ -43,7 +43,7 @@
 
 .item-project .overlay {
     position: absolute;
-    top: 100%; 
+    top: 100%; /* Initially set to hide the overlay */
     left: 0;
     right: 0;
     bottom: 0;
@@ -70,7 +70,7 @@
 }
 
 .item-project:hover .GitHub {
-    opacity: 1; 
+    opacity: 1; /* Make GitHub link visible on hover */
 }
 
 #header{
@@ -81,7 +81,7 @@ position: static;
 
 @media (max-width: 700px) { 
     #header {
-        margin-top: 95vh; 
+        margin-top: 230%; 
     }
     #title{
         margin-top: -20%;
