--- a/aboutMe.css
+++ b/aboutMe.css
@@ -53,7 +53,7 @@
 @media (max-width: 700px) { 
     #header {
 
-        margin-top: -10%; /* Moves the header up by 9% of the viewport height */
+        margin-top: -10%; 
     }
     #title{
         margin-top: 5%;
@@ -61,10 +61,9 @@
         font-size: 150%;
     }
 
-    /* Additional styles for mobile responsiveness */
     #container-aboutme, .item-aboutme {
         padding: 10px;
-        margin: 10px; /* Reduced margin for narrower screens */
+        margin: 10px; 
     }
     #container-aboutme{
         margin-bottom: 80%;
@@ -72,12 +71,12 @@
     }
 
     .divTitle {
-        font-size: clamp(18px, 5vw, 20px); /* Responsive font size for smaller screens */
+        font-size: clamp(18px, 5vw, 20px); 
     }
 
     .divText p {
         font-size: clamp(14px, 3.5vw, 16px);
-        line-height: 1.4; /* Adjust line height for better readability */
+        line-height: 1.4; 
     }
     .nav-tab {
         font-size: clamp(12px, 3.5vw, 14px);
